--- a/layouts/_partials/head.html
+++ b/layouts/_partials/head.html
@@ -1,6 +1,6 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<title>{{ if .IsHome }}手机适配应用{{ else }}{{ printf "%s | 手机适配应用" .Title }}{{ end }}</title>
+<title>{{ if .IsHome }}我们的漂流瓶{{ else }}{{ printf "%s | 我们的漂流瓶" .Title }}{{ end }}</title>
 <script src="https://cdn.tailwindcss.com"></script>
 <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
