修改图片路径

--- a/layouts/_partials/app-script.html
+++ b/layouts/_partials/app-script.html
@@ -22,7 +22,7 @@
       dataFile: "data.json", // 存储内容数据的文件
       imageDir: "static/images/user-uploads/", // 图片存储目录
       // 添加部署基础路径
-      baseUrl: "https://rkx38227-cpu.github.io/rkx38227-cpu.github.io/"
+      baseUrl: "https://rkx38227-cpu.github.io/"
     };
 
     let contents = []; // 全局内容数组
